fix(WorkingDirectoryPicker): fix picker crashes
Folder picker crashes immediately on windows desktop.

https://github.com/Xmarmalade/alisthelper/issues/13

--- a/lib/i18n/strings_en.i18n.json
+++ b/lib/i18n/strings_en.i18n.json
@@ -84,7 +84,7 @@
                 "title": "Working Directory",
                 "description": "Set Working Directory",
                 "hint": "It's a Directory, not a File!",
-                "chooseFrom": "Choose from...",
+                "chooseFrom": "Choose a directory",
                 "notFound": "No alist found in directory.",
                 "found": "Found alist.exe"
             },
