--- a/lib/i18n/strings_en.i18n.json
+++ b/lib/i18n/strings_en.i18n.json
@@ -23,7 +23,8 @@
         "logs": "Logs"
     },
     "languageSettings": {
-        "language": "Language"
+        "language": "Language",
+        "system":"System"
     },
     "button": {
         "ok": "OK",
