--- a/lib/i18n/strings_zh-Hans-CN.i18n.json
+++ b/lib/i18n/strings_zh-Hans-CN.i18n.json
@@ -23,7 +23,8 @@
         "logs": "日志"
     },
     "languageSettings": {
-        "language": "语言"
+        "language": "语言",
+        "system":"跟随系统"
     },
     "button": {
         "ok": "确认",
