feat(UpgradePage): auto upgrade alist
https://github.com/Xmarmalade/alisthelper/issues/16

--- a/lib/i18n/strings_en.i18n.json
+++ b/lib/i18n/strings_en.i18n.json
@@ -110,7 +110,7 @@
         }
     },
     "upgrade": {
-        "clickToCheck": "Click to check for updates",
+        "clickToCheck": "Click the button next to check for updates",
         "checkFirst": "Check for updates first",
         "canUpgrade": "A new version is available, do you want to upgrade?",
         "noUpgrade": "You are using the latest version.",
