feat(alist page): change get pwd to generate pwd
In AList version 3.25.0, the passwords are stored encrypted, so they can't be obtained directly and are replaced by randomly generated passwords.

--- a/lib/i18n/strings_en.i18n.json
+++ b/lib/i18n/strings_en.i18n.json
@@ -3,8 +3,8 @@
     "alistOperation": {
         "startAlist": "Start",
         "endAlist": "End",
-        "openGUI": "Open GUI",
-        "getAdmin": "Admin",
+        "openGUI": "Open Web GUI",
+        "genRandomPwd": "Generate Random Pwd",
         "getVersion": "Version"
     },
     "rcloneOperation": {
