fix(ArgsEditor): Add UniqueKey to manipulate
Flutter compares widgets only by Type and not state. Thus when the state is changed of the List represented in the List/GridView, Flutter doesn't know which children should be removed as their Types are still the same and checks out.

--- a/lib/i18n/strings_en.i18n.json
+++ b/lib/i18n/strings_en.i18n.json
@@ -109,7 +109,8 @@
                 "descriptionForRclone": "Edit startup arguments for rclone. You can also paste a full line, Alist Helper will help you parse it.",
                 "editArguments": "Edit Arguments",
                 "addArgument": "Add Argument",
-                "removeAll":"Remove all"
+                "removeAll":"Remove all",
+                "remove":"Remove"
             },
             "proxy": {
                 "title": "Http Proxy",
