--- a/lib/i18n/strings_en.i18n.json
+++ b/lib/i18n/strings_en.i18n.json
@@ -10,21 +10,21 @@
     "rcloneOperation": {
         "startRclone": "Start",
         "endRclone": "End",
-        "getRcloneInfo":"Version Info",
-        "help":"This feature is currently under construction. \nThere may be breaking changes in the future. \nQ&A: \nQ1: Where should I put Rclone? \nA1: At present, please put it in the same directory as the alist executable file. \n Q2: Can I run multiple Rclone? \nA2: Not currently, please wait for the next update. \n"
+        "getRcloneInfo": "Version Info",
+        "help": "Q&A: \nQ1: Where should Rclone be placed? \nA1: For now, please put it in the same directory as the alist executable file. \nQ2: How to use Rclone? \nA2: 1. First run the WEB GUI to add storage. Enter rclone rcd --rc-web-gui in the Rclone parameter setting to start. \n 2. Then modify the parameters to rclone mount remote: /path/to/mountpoint. Some network disks need to set parameters, please search by yourself \nQ3: How to use other functions of Rclone? \nA3: Please refer to Rclone official documentation or search in the community."
     },
     "firstLaunch": {
         "intro": "Welcome to use Alist Helper, let's get started!",
         "about": "Click here to learn more about Alist Helper!",
         "chooseTheme": "First, let's choose your preferred theme here!",
         "chooseDirectory": "Second, you have to get an alist and tell the Alist Helper where it is!",
-        "autoInstall": "AlistHelper now supports automatic installation of alist, try it out!",  
+        "autoInstall": "AlistHelper now supports automatic installation of alist, try it out!",
         "getAlist": "Want to use a specific version of alist or install it manually? Click here!",
-        "finish":"Finish! You can change these settings in settings!"
+        "finish": "Finish! You can change these settings in settings!"
     },
     "tabs": {
         "home": "Home",
-        "mount":"Mount",
+        "mount": "Mount",
         "settings": "Settings"
     },
     "home": {
@@ -33,7 +33,7 @@
     },
     "languageSettings": {
         "language": "Language",
-        "system":"System"
+        "system": "System"
     },
     "button": {
         "ok": "OK",
@@ -109,8 +109,8 @@
                 "descriptionForRclone": "Edit startup arguments for rclone. You can also paste a full line, Alist Helper will help you parse it.",
                 "editArguments": "Edit Arguments",
                 "addArgument": "Add Argument",
-                "removeAll":"Remove all",
-                "remove":"Remove"
+                "removeAll": "Remove all",
+                "remove": "Remove"
             },
             "proxy": {
                 "title": "Http Proxy",
@@ -120,7 +120,7 @@
                 "error": "Invalid proxy address"
             }
         },
-        "rcloneSettings":{
+        "rcloneSettings": {
             "title": "Rclone Options",
             "autoStartAlist": {
                 "title": "Allow rclone auto start",
